@@ -1,9 +1,6 @@
 package ru.job4j.tracker;
 
-import ru.job4j.action.*;
-
-import java.util.Arrays;
-
+import java.util.ArrayList;
 import java.util.List;
 
 public class StartUI {
@@ -13,39 +10,43 @@ public class StartUI {
         this.out = out;
     }
 
-    public void init(Input input, MemTracker memTracker, List<UserAction> actions) {
-        boolean run = true;
-        while (run) {
-            showMenu(actions);
-            int select = input.askInt("Выбрать: ");
-            if (select < 0 || select >= actions.size()) {
-                out.println("Неверный ввод, вы можете выбрать: 0 .. " + (actions.size() - 1));
-                continue;
+        public void init(Input input, Store tracker, List<UserAction> actions) {
+            boolean run = true;
+            while (run) {
+                showMenu(actions);
+                int select = input.askInt("Select: ");
+                if (select < 0 || select >= actions.size()) {
+                    out.println("Wrong input, you can select: 0 .. " + (actions.size() - 1));
+                    continue;
+                }
+                UserAction action = actions.get(select);
+                run = action.execute(input, tracker);
             }
-            UserAction action = actions.get(select);
-            run = action.execute(input, memTracker);
-        }
-    }
-
-    private void showMenu(List<UserAction> actions) {
-        out.println("Меню:");
-        for (int i = 0; i < actions.size(); i++) {
-            out.println(i + ". " + actions.get(i).name());
         }
 
-    }
+        private void showMenu(List<UserAction> actions) {
+            out.println("Menu:");
+            for (int i = 0; i < actions.size(); i++) {
+                out.println(i + ". " + actions.get(i).name());
+            }
+        }
 
-    public static void main(String[] args) {
-        Output output = new ConsoleOutput();
-        Input input = new ValidateInput(output, new ConsoleInput());
-        MemTracker memTracker = new MemTracker();
-        List<UserAction> actions = Arrays.asList(new Create(output),
-                new FindAll(output),
-                new Replace(output),
-                new Delete(output),
-                new FindById(output),
-                new FindByName(output),
-                new Exit(output));
-        new StartUI(output).init(input, memTracker, actions);
+        public static void main(String[] args) {
+            Output output = new ConsoleOutput();
+            Input input = new ValidateInput(output, new ConsoleInput());
+            try (Store tracker = new SqlTracker()) {
+                List<UserAction> actions = List.of(
+                        new CreateAction(output),
+                        new ShowAllAction(output),
+                        new EditAction(output),
+                        new DeleteAction(output),
+                        new FindItemIdAction(output),
+                        new FindItemByNameAction(output),
+                        new ExitAction(output)
+                );
+                new StartUI(output).init(input, tracker, actions);
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+        }
     }
-}
